# QUASAR

./: .gitignore  CMakeLists.txt  Makefile  README.md  receiver.cpp
apps/: CMakeLists.txt
apps/Common/: CMakeLists.txt
apps/Common/include/: Animator.h  BC4DepthStreamer.h  BC4DepthVideoTexture.h  BlurEdges.h  CameraAnimator.h  CameraPose.h  CudaUtils.h  DataPacket.h  DataReceiver.h  DataStreamer.h  DepthReceiverTexture.h  DepthSender.h  DepthStreamer.h  DepthVideoTexture.h  HoleFiller.h  MeshFromQuads.h  PoseReceiver.h  PoseSendRecvSimulator.h  PoseStreamer.h  QuadMaterial.h  QuadsBuffers.h  QuadsGenerator.h  Recorder.h  Socket.h  VideoStreamer.h  VideoTexture.h
apps/Common/shaders/: CMakeLists.txt  atw.frag  bc4Compression.comp  bc4_compress.comp  blurEdges.frag  camera.glsl  cameraUtils.glsl  camera_utils.glsl  constants.glsl  genMeshFromBC4.comp  holeFiller.frag  hole_filler.frag  material_quad.frag  material_quad.vert  meshFromBC4.comp  meshFromDepth.comp  mesh_from_depth.comp  smartDownsample.comp  toneMap.glsl  tone_map.glsl
apps/Common/src/: Animator.cpp  BC4DepthStreamer.cpp  BC4DepthVideoTexture.cpp  CameraAnimator.cpp  CudaUtils.cpp  DataReceiverTCP.cpp  DataReceiverUDP.cpp  DataStreamerTCP.cpp  DataStreamerUDP.cpp  DepthReceiverTexture.cpp  DepthStreamer.cpp  DepthVideoTexture.cpp  MeshFromQuads.cpp  QuadMaterial.cpp  QuadsBuffers.cpp  QuadsGenerator.cpp  Recorder.cpp  VideoStreamer.cpp  VideoTexture.cpp
apps/atw/: CMakeLists.txt
apps/atw/receiver/: CMakeLists.txt
apps/atw/simulator/: CMakeLists.txt
apps/atw/streamer/: CMakeLists.txt
apps/common/: CMakeLists.txt  CameraPose.h
apps/common/include/: CameraPose.h  PoseReceiver.h  PoseStreamer.h  Socket.h  VideoStreamer.h  VideoTexture.h
apps/common/src/: VideoStreamer.cpp  VideoTexture.cpp
apps/compute/: CMakeLists.txt
apps/compute/src/: compute.cpp
apps/depthBuffer/: CMakeLists.txt
apps/depthBuffer/shaders/: meshMaterial.frag  postprocess.frag
apps/depthBuffer/src/: depthBuffer.cpp
apps/depth_codec/: CMakeLists.txt
apps/depth_codec/shaders/: bc4.comp  bc4BufferShader.comp  bc4_compress.comp  genMesh.comp  genPtCloudFromDepth.comp
apps/depth_codec/src/: bc4_depth.cpp  bc4_depth.h  depth_codec.cpp
apps/depth_peeling/: CMakeLists.txt
apps/depth_peeling/src/: depth_peeling.cpp
apps/dpwarp/: CMakeLists.txt
apps/dpwarp/receiver/: CMakeLists.txt
apps/dpwarp/simulator/: CMakeLists.txt
apps/dpwarp/streamer/: CMakeLists.txt
apps/mesh/: CMakeLists.txt
apps/mesh/src/: mesh.cpp
apps/meshing/: CMakeLists.txt
apps/meshing/shaders/: genMesh.comp
apps/meshing/src/: meshing.cpp
apps/meshing2/: CMakeLists.txt
apps/meshing2/shaders/: genMesh2.comp
apps/meshing2/src/: meshing2.cpp
apps/meshing2viz/: CMakeLists.txt
apps/meshing2viz/src/: meshing2viz.cpp
apps/meshingviz/: CMakeLists.txt
apps/meshingviz/src/: meshingviz.cpp
apps/meshwarp/: CMakeLists.txt
apps/meshwarp/receiver/: CMakeLists.txt
apps/meshwarp/simulator/: CMakeLists.txt
apps/meshwarp/streamer/: CMakeLists.txt
apps/meshwarp2/: CMakeLists.txt
apps/meshwarp2/receiver/: CMakeLists.txt
apps/meshwarp2/streamer/: CMakeLists.txt
apps/multiwarp/: CMakeLists.txt
apps/multiwarp/receiver/: CMakeLists.txt
apps/multiwarp/simulator/: CMakeLists.txt
apps/multiwarp/streamer/: CMakeLists.txt
apps/pbr/: CMakeLists.txt
apps/pbr/shaders/: background.frag  brdf.frag  brdf.vert  meshMaterial.frag  meshMaterial.vert  pbr.frag  pbr.vert  skybox.vert
apps/pbr/src/: pbr.cpp
apps/quads/: CMakeLists.txt
apps/quads/shaders/: genQuads.comp
apps/quads/src/: quads.cpp
apps/quadstream/: CMakeLists.txt
apps/quadstream/receiver/: CMakeLists.txt
apps/quadstream/simulator/: CMakeLists.txt
apps/quadsviz/: CMakeLists.txt
apps/quadsviz/src/: quadsviz.cpp
apps/quadwarp/: CMakeLists.txt
apps/quadwarp/receiver/: CMakeLists.txt
apps/quadwarp/simulator/: CMakeLists.txt
apps/quadwarp/streamer/: CMakeLists.txt
apps/receiver/: CMakeLists.txt  Makefile
apps/receiver/shaders/: skybox.frag  (+6 more)
apps/scene_viewer/: CMakeLists.txt
apps/streamer/: CMakeLists.txt  Makefile
apps/test/: CMakeLists.txt
renderer/: CMakeLists.txt
renderer/include/: AABB.h  AmbientLight.h  Animation.h  Animator.h  BoundingSphere.h  Buffer.h  Camera.h  ComputeShader.h  Cube.h  CubeMap.h  DirectionalLight.h  Entity.h  FrameBuffer.h  Framebuffer.h  Frustum.h  FullScreenQuad.h  GLFWWindow.h  GraphicsPipeline.h  IndexBuffer.h  Light.h  Lights.h  Material.h  Mesh.h  Model.h  OpenGLApp.h  OpenGLAppConfig.h  OpenGLObject.h  OpenGLRenderer.h  Path.h  PerspectiveCamera.h  Plane.h  PointLight.h  Primatives.h  Recorder.h  RenderBuffer.h  Renderbuffer.h  Scene.h  SceneLoader.h  Shader.h  Sphere.h  (+5 more)
renderer/shaders/: CMakeLists.txt  Makefile  camera.glsl  cmake_install.cmake  common.vert  constants.glsl  deferred_gbuffer.frag  deferred_lighting.frag  lights.glsl  material_lit.frag  material_pbr.frag  material_unlit.frag  pbr.glsl  shaders_atw.h
renderer/src/: Animation.cpp  Animator.cpp  Camera.cpp  ComputeShader.cpp  CubeMap.cpp  DiffSpecMaterial.cpp  DirShadowMapMaterial.cpp  Entity.cpp  GLFWWindow.cpp  ImGuiManager.cpp  Material.cpp  Mesh.cpp  Model.cpp  OpenGLApp.cpp  OpenGLRenderer.cpp  PBRMaterial.cpp  PerspectiveCamera.cpp  PointShadowMapMaterial.cpp  Recorder.cpp  Scene.cpp  SceneLoader.cpp  Shader.cpp  ShadowMapMaterial.cpp  Texture.cpp  TexturedMaterial.cpp  UnlitMaterial.cpp  VRCamera.cpp  Vertex.cpp
shaders/: CMakeLists.txt  common.vert  diffuseSpecular.frag  main.vert  material_pbr.frag  material_unlit.frag  pbr.frag  textured.frag  unlit.frag
shaders/IBL/: brdf.frag  brdf.vert  irradianceConvolution.frag
shaders/cubemap/: cubemap.vert  skybox.frag
shaders/pbr/: brdf.frag  brdf.vert  pbr.frag  prefilter.frag
shaders/postprocessing/: compositeLayers.frag  displayColor.frag  displayDepth.frag  displayIDs.frag  displayNormals.frag  displayPositions.frag  displayTexture.frag  postprocess.vert  sidebyside.frag
shaders/shadows/: dirShadow.vert  pointShadow.geom  pointShadow.vert
shaders/skybox/: skybox.frag  skybox.vert
(+372 files in other folders)
